--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,9 @@ dependencies:
   flutter:
     sdk: flutter
   provider: ^3.1.0
+  http: ^0.12.0+2
+  qr_utils: ^0.1.4
+  unique_identifier: ^0.0.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
