--- a/.gitignore
+++ b/.gitignore
@@ -11,49 +11,7 @@ pubspec.lock
 # Directory created by dartdoc
 # If you don't generate documentation locally you can remove this line.
 doc/api/
-android/.gradle/4.10.2/fileHashes/fileHashes.bin
-android/.gradle/4.10.2/fileHashes/fileHashes.lock
-android/.gradle/4.10.2/fileHashes/resourceHashesCache.bin
-android/.gradle/4.10.2/javaCompile/jarAnalysis.bin
-android/.gradle/4.10.2/javaCompile/javaCompile.lock
-android/.gradle/4.10.2/javaCompile/taskHistory.bin
-android/.gradle/4.10.2/taskHistory/taskHistory.bin
-android/.gradle/4.10.2/taskHistory/taskHistory.lock
-android/.gradle/buildOutputCleanup/buildOutputCleanup.lock
-android/.gradle/buildOutputCleanup/outputFiles.bin
-android/.gradle/buildOutputCleanup/outputFiles.bin
-android/.gradle/buildOutputCleanup/buildOutputCleanup.lock
-android/.gradle/4.10.2/taskHistory/taskHistory.lock
-android/.gradle/4.10.2/taskHistory/taskHistory.bin
-android/.gradle/4.10.2/javaCompile/taskHistory.bin
-android/.gradle/4.10.2/javaCompile/javaCompile.lock
-android/.gradle/4.10.2/javaCompile/jarAnalysis.bin
-android/.gradle/4.10.2/fileHashes/resourceHashesCache.bin
-android/.gradle/4.10.2/fileHashes/fileHashes.lock
-android/.gradle/4.10.2/fileHashes/fileHashes.bin
-.idea/codeStyles/codeStyleConfig.xml
-.idea/libraries/Dart_Packages.xml
-.idea/workspace.xml
-android/.gradle/4.10.2/fileHashes/fileHashes.bin
-android/.gradle/4.10.2/fileHashes/fileHashes.lock
-android/.gradle/4.10.2/fileHashes/resourceHashesCache.bin
-android/.gradle/4.10.2/javaCompile/jarAnalysis.bin
-android/.gradle/4.10.2/javaCompile/javaCompile.lock
-android/.gradle/4.10.2/javaCompile/taskHistory.bin
-android/.gradle/4.10.2/taskHistory/taskHistory.bin
-android/.gradle/4.10.2/taskHistory/taskHistory.lock
-android/.gradle/buildOutputCleanup/buildOutputCleanup.lock
-android/.gradle/buildOutputCleanup/outputFiles.bin
-.idea/assetWizardSettings.xml
-.idea/workspace.xml
-android/.gradle/4.10.2/fileHashes/fileHashes.bin
-android/.gradle/4.10.2/fileHashes/fileHashes.lock
-android/.gradle/4.10.2/fileHashes/resourceHashesCache.bin
-android/.gradle/4.10.2/javaCompile/classAnalysis.bin
-android/.gradle/4.10.2/javaCompile/jarAnalysis.bin
-android/.gradle/4.10.2/javaCompile/javaCompile.lock
-android/.gradle/4.10.2/javaCompile/taskHistory.bin
-android/.gradle/4.10.2/taskHistory/taskHistory.bin
-android/.gradle/4.10.2/taskHistory/taskHistory.lock
-android/.gradle/buildOutputCleanup/buildOutputCleanup.lock
-android/.gradle/buildOutputCleanup/outputFiles.bin
+
+# Dateien von IDEs und tools
+android/.gradle/
+.idea
