--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,6 @@ doc/api/
 # Dateien von IDEs und tools
 android/.gradle/
 .idea/
+.idea/libraries/Dart_Packages.xml
+.idea/libraries/Flutter_Plugins.xml
+.idea/workspace.xml
