--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,7 +22,9 @@ dependencies:
   provider: ^3.1.0
   http: ^0.12.0+2
   qr_utils: ^0.1.4
+  qr_flutter: ^3.0.1
   unique_identifier: ^0.0.3
+  mdi: 0.2.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
